# PyFlunt

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG_EN.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_EN.md  CONTRIBUTING.md  CONTRIBUTING_EN.md  LICENSE  Makefile  README.md  README_EN.md  SECURITY.md  SECURITY_EN.md  help.py  mkdocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt  sonar-project.properties  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  vulnerability_report.md
.github/fluxos de trabalho/: ci.yml  python-publish.yml
.github/workflows/: cd.yml  ci.yml  code_quality.yml  codeql.yml  linters.yml  main.yml  publish.yml  pyre.yml  pysa.yml  realease.yml  release.yml  sonar_cloud.yml  tests.yml
docs/: CHANGELOG.md  CHANGELOG_EN.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_EN.md  README.md  README_EN.md  SECURITY.md  SECURITY_EN.md  api-reference.md  getting-started.md  index.md
docs/validations/: index.md  string.md
flunt/: __init__.py  contract.py  notifiable.py  notification.py
flunt/constants/: __init__.py  messages.py
flunt/localization/: __init__.py  flunt_error_messages.py  flunt_regex_patterns.py
flunt/notifications/: interface.py  notifiable.py  notification.py
flunt/protocols/: notifiable_protocol.py
flunt/validations/: bool.py  bool_validation_contract.py  collections_validation_contract.py  commons_validation_contract.py  contract.py  credit_card_validation_contract.py  email.py  email_validation_contract.py  strings.py  strings_validation_contract.py  url_validation_contract.py
pyflunt/: contract.py  notifiable.py
requirements/: requirements_dev.txt
samples/: __init__.py  flunt_sample.py  main.py  pyflunt_sample.py
tests/: conftest.py  test_bool_validation.py  test_flunt.py  test_notifiable.py  test_pyflunt.py
tests/entity/: sample_entity.py
tests/localization/: test_flunt_regex_patterns.py
tests/mocks/entity/: sample_entity.py
tests/mocks/value_objects/: vo.py
tests/models/: vo.py
tests/notifications/: __init__.py  test_notifiable.py  test_notification.py
tests/validations/: test_bool_validation_contract.py  test_bool_validation_contracts.py  test_collections_validation_contract.py  test_commons_validation_contract.py  test_contract.py  test_credit_card_validation_contract.py  test_email_validation_contract.py  test_string_validation_contract.py  test_url_validation_contract.py
tests/value_objects/: vo.py
