[tool.poetry]
name = "Flunt"
version = "2.3.0"
description = "Python implementation of Domain Notification Pattern inspired by Flunt (.NET)"
authors = ["Emerson Delatorre <38289677+Delatorrea@users.noreply.github.com>"]
repository = "https://github.com/Delatorrea/PyFlunt"
homepage = "https://github.com/Delatorrea/PyFlunt"
documentation = "https://github.com/Delatorrea/PyFlunt"
license = "MIT"
keywords = [
  "notifications",
  "python",
  "ddd",
  "python3",
  "validations",
  "notification",
  "ddd-patterns",
  "ddd-architecture",
  "validation-library",
  "class-validator",
  "fluentvalidation",
  "class-validation",
  "flunt",
  "domain-notification",
  "class-validator-cpf"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business",
  "Topic :: Utilities",
  "Topic :: Software Development",
  "Topic :: Software Development :: Internationalization",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Natural Language :: English",
  "Natural Language :: Portuguese",
  "Natural Language :: Portuguese (Brazilian)"
]
readme = "./docs/README.md"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.9 <4.0"
typing-extensions = "^4.9.0"
deprecated = "^1.2.14"

[tool.poetry.group.dev.dependencies]
poetry = "^1.7.1"
faker = ">=23.1,<31.0"
pytest = "^8.0.1"
pytest-cov = ">=4.1,<7.0"
ruff = ">=0.2.1,<0.8.0"
pre-commit = ">=3.6.1,<5.0.0"
pre-commit-hooks = ">=4.5,<6.0"
mypy = "^1.8.0"
tox = "*"
poethepoet = ">=0.25,<0.30"
ipykernel = "^6.29.4"

[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.9"
mkdocstrings = ">=0.24,<0.28"
mkdocstrings-python = "^1.8.0"

[tool.poetry.scripts]
sample = "samples.flunt_sample:main"

[tool.pytest.ini_options]
pythonpath = [
  "flunt"
]
python_files = "test*.py"
python_classes = "Test"
python_functions = "test"
addopts = "--tb=native"
console_output_style = "classic"
junit_duration_report = "call"
filterwarnings = "ignore::RuntimeWarning"

[tool.ruff]
line-length = 79
indent-width = 4
target-version = "py39"
fix = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
unfixable = []
select = [
  "F",              # pyflakes
  "E", "W", "D",    # pycodestyle
  "I",              # isort
  "N",              # flake8-naming
  "UP",             # pyupgrade
  "YTT",            # flake8 2020
  "ASYNC",          # flake8-async
  "B",              # flake8-bugbear
  "C4",             # flake8-comprehensions
  "DTZ",            # flake8-datatimez
  "T10",            # flake8-debugger
  "LOG",            # flake8-logging
  "G",              # flake8-logging-format
  "PIE",            # flake8-pie
  "T20",            # flake8-print
  "PYI",            # flake8-pyi
  "PT",             # flake8-pytest-style
  "Q",              # flake8-quotes
  "RSE",            # flake8-raise
  "RET",            # flake8-return
  "SLF",            # flake8-self
  "SLOT",           # flake8-slots
  "TID",            # flake8-tidy-imports
  "TCH",            # flake8-type-checking
  "INT",            # flake8-gettext
  "ARG",            # flake8-unused-arguments
  "PTH",            # flake8-use-pathlib
  "TD",             # flake8-todos
  "PL",             # pylint
]
ignore = [
  "D100",
  "D103",
  "D104",
  "D203",
  "D206",
  "D212",
  "D417",
  "E501",
  "G004",
  "TD004",
  "TD003",
  "W191",
  "PLE1205"
]

[tool.mypy]
ignore_missing_imports = true

[tool.poe]
poetry_command = ""

[tool.poe.tasks]
test = "pytest"
test-verbose = "pytest -vv"
test-cov = "pytest --cov=flunt --cov-report=html"
tox = "tox -e py"
pre-commit-install = "pre-commit install"
pre-commit-run = "pre-commit run --all-files --show-diff-on-failure"
lint = ["_ruff-check", "lint-check", "_ruff-format", "_mypy"]
lint-check = "ruff check"
export-dev = "poetry export -f requirements.txt --output requirements_dev.txt  --with dev"

_ruff-check = "poetry run ruff check --select I --fix ."
_ruff-format = "poetry run ruff format ."
_mypy = "poetry run mypy flunt tests"
